Revision history for Perl extension HTTP::BrowserDetect.

{{$NEXT}}

1.56 2013-08-15 01:02:32 America/Toronto
    - Adds experimental and undocumented robot_name method.

1.55 2013-07-22 23:06:40 America/Toronto
    - Add all current Google robot user agents (Douglas Christopher Wilson)

1.54 2013-07-21
    - Fix generic version parsing not to cross whitespace (Douglas Christopher
      Wilson)
    - Compare Safari build numbers by parts instead of floats (Douglas
      Christopher Wilson)
    - Removes Exporter

1.53 2013-07-19
    - Detect IE on ARM as tablet (Douglas Christopher Wilson)
    - Add BlackBerry PlayBook detection (Douglas Christopher Wilson)
    - Split version parsing into two expressions (Douglas Christopher Wilson)

1.52 2013-05-03
    - Fixes warning when MSIE does not have a minor version
    - Simplifies MSIE version regex logic
    - Removes a test for AskJeeves browser

1.51 2013-04-25
    - Adds Android tablet detection (yeahoffline <frank.gasser@gmail.com>)

1.50 2013-03-01
    - Adds Firefox OS detection (Douglas Christopher Wilson)

1.49 2013-02-27
    - Fixes language/country detectio for Safari (Douglas Christopher Wilson)

1.48 2013-02-26
    - Adds Obigo browser detection (Douglas Christopher Wilson)

1.47 2012-12-10
    - Distinguishes version of Windows Phone (Douglas Christopher Wilson)
    - Enables warnings and traps warnings in tests (Douglas Christopher Wilson)

1.46 2012-12-05
    - Add Windows 8 detection (Douglas Christopher Wilson)

1.45 2012-12-02
    - Removes Data::Dump from deps
    - Supports Windows Phone 8.0 devices (Douglas Christopher Wilson)
    - Fixes mistaken WAP detection for Nokia Windows Phones
    - Fixes warnings on browser version when running under -w (Aran Deltac)

1.44 2012-05-03
    - Fixes "sort (...) interpreted as function" introduced in 1.43, which was
      causing tests to fail

1.43 2012-05-02
    - Sorts keys when iterating for consistency across Perl implementations (Thom Blake)
