@@ -5,7 +5,7 @@ author  = Olaf Alders <olaf@wundercounter.com> (current maintainer)
 license = Perl_5
 copyright_holder = Lee Semel
 copyright_year   = 2013
-version = 1.56
+version = 1.57
 main_module = lib/HTTP/BrowserDetect.pm
 
 [GatherDir]
