@@ -1,6 +1,11 @@
 Revision history for Perl extension HTTP::BrowserDetect.
 
 {{$NEXT}}
+    - Make internals a little less quirky.
+    - Stop returning explicit undef for browser_string and os_string.  (Why
+      would you ever call these in list context?)
+    - Return name of robot for browser_name when browser is, in fact, a bot.
+      Previous behaviour was to return undef or something just really wrong.
 
 1.56 2013-08-15 01:02:32 America/Toronto
     - Adds experimental and undocumented robot_name method.
